--- a/index.html
+++ b/index.html
@@ -20,7 +20,18 @@
 </head>
 	
 <body style="background-image: url(https://wallpaper.dog/large/17174245.jpg); background-repeat: no-repeat;background-size: cover;">
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4701707604560592"
+     crossorigin="anonymous"></script>
+<!-- Thomas -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4701707604560592"
+     data-ad-slot="3104765125"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
 <div class="container-fluid p-5">
 	
